data/manifests/artifacthub/bitnami/minio/009_service_release-name-minio.yaml
apiVersion: v1
kind: Service
metadata:
  name: release-name-minio
  namespace: default
  labels:
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: minio
    app.kubernetes.io/version: 2025.7.23
    helm.sh/chart: minio-17.0.21
    app.kubernetes.io/component: minio
    app.kubernetes.io/part-of: minio
spec:
  type: ClusterIP
  ports:
  - name: tcp-api
    port: 9000
    targetPort: api
    nodePort: null
  selector:
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/name: minio
    app.kubernetes.io/component: minio
    app.kubernetes.io/part-of: minio
